added post and get request for users from firebase

--- a/src/components/User/UserForm.css
+++ b/src/components/User/UserForm.css
@@ -21,7 +21,7 @@
 }
 
 /* Modal Content */
-.modal-content {
+#modal-content {
     background-color: #fefefe;
     margin: auto;
     padding: 50px;
